assets/css/style.css
h1 {
    margin: 0px;
}

h2 {
    margin: 0px;
    margin-bottom: 5px;
}

.detailText {
    /* margin: 0px; */
    font-size: 12px;
}

.centerText {
    text-align: center;
}

body {
    background-color: white;
    color: black;
    max-width: 960px;
    margin: auto;
    /* Set font to prefer system font (and then system-like) */
    font-family: system-ui, Helvetica, Arial, Roboto, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

.header {
    padding: 15px;
    text-align: center;
    /* font-size: 30px; */
}

.information {
    padding: 15px;
    text-align: left;
    background-color: rgba(128, 128, 128, 0.25);
    border-radius: 15px;
    max-width: 750px;
    margin: auto;
    overflow: auto;
    /* display: flex;
    flex-wrap: wrap;
    justify-content: left;
    align-items: flex-start; */
}

.avatar {
    border-radius: 50%;
    max-width: 150px;
    float: left;
    /* padding: 15px; */
    padding-right: 15px;
}

.icon {
    max-width: 150px;
    float: left;
    padding-right: 15px;
}

.badge {
    padding: 0px 5px;
}

.navBar {
    /* margin: 15px; */
    justify-content: center;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.buttonDrawer {
    margin: 10px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.pillButton a {
    display: inline-block;
    padding: 5px;
    margin: 5px;
    border-radius: 5px;
    /* background-color: white; */
    color: black;
    font-weight: bold;
    text-align: center;
    text-decoration: none;
    font-size: 14px;
}

.pillButton a.active {
    background-color: rgba(128, 128, 128, 0.25);

}

.pillButton a:hover {
    background-color: #3D7AFF;
    color: white;
}
a {
    text-decoration: none;
}

.teaser {
    margin: 60px;
    font-size: 25px;
    font-weight: bold;
    text-align: center;
}

/* Dark Mode support */
@media (prefers-color-scheme: dark) {
    body {
        background-color: black;
        color: white;
    }
    .pillButton a {
        /* background-color: black; */
        color: white;
    }
}

